# yubi-sw

./: .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
airoa_quest/airoa_quest_bridge/: package.xml  setup.cfg  setup.py
airoa_quest/airoa_quest_msgs/: CMakeLists.txt  package.xml
deploy/new-machine/: Makefile  SETUP.md  yubi_s3_direct.sh
deploy/yubi1/: README.md  Start-YUBI.desktop  start-yubi.sh  yubi_s3_direct.py  yubi_s3_direct.sh
docker/: Dockerfile  ros_entrypoint.sh
firmware/ESP32C6_AS5601/: AS5601.cpp  AS5601.h  ESP32C6_AS5601.ino
footpedal_ros/: CMakeLists.txt  package.xml
footpedal_ros/src/: footpedal_node.cpp
tools/: yubi_device_select_gui.py  yubi_dhcp_setup.sh  yubi_lid_setup.sh  yubi_udev_setup.sh
yubi_bringup/: package.xml  setup.cfg  setup.py
yubi_bringup/config/common/: recording_gate.yaml  robot_config.yaml  yubi_devices.yaml
yubi_bringup/config/portable/: recording_gate.yaml  robot_config.yaml  yubi_devices.yaml
yubi_bringup/config/stationary/: recording_gate.yaml  robot_config.yaml  yubi_devices.yaml
yubi_bringup/docker/: cyclonedds_profile.xml
yubi_bringup/launch/: yubi_bringup.launch.py  yubi_data_collection.launch.py
yubi_bringup/test/: test_build_runtime_configs.py  test_yubi_device_setup.py
yubi_bringup/test/fixtures/legacy_stationary/: recording_gate.yaml  robot_config.yaml  upload_targets.yaml  yubi_devices.yaml
yubi_bringup/tools/: build_runtime_configs.py
yubi_bringup/yubi_bringup/: double_click_detector.py  encoder_node.py  gripper_double_click_node.py  launch_registry.py  portable_joy_command_node.py
yubi_description/: CMakeLists.txt  package.xml
yubi_description/meshes/: hand_left_left_finger_link.STL  hand_left_left_finger_link_col.STL  hand_left_right_finger_link.STL  hand_left_right_finger_link_col.STL  hand_right_left_finger_link.STL  hand_right_left_finger_link_col.STL  hand_right_right_finger_link.STL  hand_right_right_finger_link_col.STL
(+9 files in other folders)
